:bug: Fix TeamMember__container textalign

--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -76,6 +76,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    text-align: center;
   }
 
   & .TeamMember__container__picture img {
